results/pipeline/mbpp/openai/test_scripts/MbppEval-418_3.out
Error running code: invalid non-printable character U+00A0 (<string>, line 8)
